Update dependencies; consolodate sbt files; prune sbt plugins